Fix: Theme minor errors & projects links errors on mobile

--- a/frontend/src/styles/global/text.css
+++ b/frontend/src/styles/global/text.css
@@ -17,7 +17,7 @@
     color: var(--highlight3);
 }
 .keyword2 {
-    color: var(--highlight4);
+    color: var(--highlight5);
 }
 
 
